--- a/public/main.css
+++ b/public/main.css
@@ -22,9 +22,9 @@
     font-size: 0.75rem;
     line-height: 1;
     margin-bottom:0.5rem;
-}
+} */
 
-.btn-delete{
+/* .btn-delete{
     align-items: flex-start;
     position:absolute;
     top: 10px;
@@ -36,17 +36,17 @@
     color:#fff;
     border-radius: 50%;
     transition: color 0.4s;
-}
-
+} */
+/* 
 .btn-delete:hover{
     background-color: #fff;
     color:rgb(50, 35, 54);
-}
-.form-delete{
+} */
+/* .form-delete{
     margin:0;
     width:0;
     height: 0;
-}
+} */
 
 body{
     padding:0;
@@ -71,7 +71,7 @@ nav{
 }
 
 
-header h1{
+h1{
     text-shadow: 0 0 15px rgb(50, 35, 54);
 }
 
