--- a/public/main.css
+++ b/public/main.css
@@ -1,59 +1,3 @@
-.item{
-    background: #fff;
-    border-radius: 0.25rem;
-    height: 285px;
-    overflow: hidden;
-    position: relative;
-}
-
-.img-container{
-    width:100%;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin:0 0 1rem;
-}
-.info-container{
-    padding: 0 15px;
-}
-
-.info-container p {
-    font-size: 0.75rem;
-    line-height: 1;
-    margin-bottom:0.5rem;
-} */
-
-/* .btn-delete{
-    align-items: flex-start;
-    position:absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 20;
-    font-size: 13.6px;
-    border:none;
-    background:rgba(50, 35, 54, .75);
-    color:#fff;
-    border-radius: 50%;
-    transition: color 0.4s;
-} */
-/* 
-.btn-delete:hover{
-    background-color: #fff;
-    color:rgb(50, 35, 54);
-} */
-/* .form-delete{
-    margin:0;
-    width:0;
-    height: 0;
-} */
-
-body{
-    padding:0;
-    background: rgb(242, 242, 248);
-    min-height: 100%;
- 
-}
 
 header{
     background: url(/img/mickey.jpg);
@@ -70,18 +14,22 @@ nav{
     padding:1rem 0;
 }
 
-
 h1{
-    text-shadow: 0 0 15px rgb(50, 35, 54);
+    text-shadow: 0 5px 15px rgb(0, 0, 0);
+    color: rgb(119, 205, 236);
+    text-align: center;
+    padding: 2rem;
+    font-family: 'Monofett', cursive;
 }
 
 footer{
-    margin-top:3rem;
-    background:rgb(50, 35, 54);
-    color:#fff;
-    height: 4rem;
+
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align:center;
+    background:rgb(37, 0, 48);
+    color:#fff;
 }
